feat: add multi-model AI routing and LLM-based intent classification
Replace single free-tier model with 3-model routing via OpenRouter:
- Gemini Flash for fast intent classification + entity extraction
- Claude Sonnet for high-quality portfolio synthesis
- StepFun Flash for quick Q&A fallback

Replace brittle keyword-based IntentRouterService with LLM-powered
LLMIntentRouterService that extracts fund names, timeframes, amounts,
and goal types in a single call. Falls back to keyword matching on failure.

Add 5 new chat intents: WHAT_IF, GOAL_PLANNING, FUND_STORY,
STATEMENT_ANALYZE, PEER_COMPARE.

Upgrade synthesis prompt to 300-word markdown output with Indian
currency formatting and actionable next steps.